RESOLVED FIXED80314
[Qt][WK2] MiniBrowser on desktop does not react to click events
https://bugs.webkit.org/show_bug.cgi?id=80314
Summary [Qt][WK2] MiniBrowser on desktop does not react to click events
Rafael Brandao
Reported 2012-03-05 12:22:52 PST
Right now it's not possible to navigate on any links so far, just run MiniBrowser --desktop, wait for google page to show up and try to click on anything.
Attachments
Patch (1.44 KB, patch)
2012-03-07 13:37 PST, Hugo Parente Lima
no flags
Alexis Menard (darktears)
Comment 1 2012-03-07 09:09:45 PST
(In reply to comment #0) > Right now it's not possible to navigate on any links so far, just run MiniBrowser --desktop, wait for google page to show up and try to click on anything. Only happen with --desktop.
Hugo Parente Lima
Comment 2 2012-03-07 13:37:21 PST
WebKit Review Bot
Comment 3 2012-03-07 15:02:19 PST
Comment on attachment 130684 [details] Patch Clearing flags on attachment: 130684 Committed r110113: <http://trac.webkit.org/changeset/110113>
WebKit Review Bot
Comment 4 2012-03-07 15:02:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.