[Qt][WK2] MiniBrowser on desktop does not react to click events https://bugs.webkit.org/show_bug.cgi?id=80314

Patch by Hugo Parente Lima <hugo.lima@openbossa.org> on 2012-03-07
Reviewed by Kenneth Rohde Christiansen.

Do not enable touch mocking on desktop mode.

* MiniBrowser/qt/MiniBrowserApplication.cpp:
(MiniBrowserApplication::handleUserOptions):

Canonical link: https://commits.webkit.org/97721@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110113 268f45cc-cd09-0410-ab3c-d52691b4dbfc